- Fancier search. - Fixes menu not fitting on settings pages. (too many pages)
git-svn-id: https://subversion.assembla.com/svn/mapler-me@453 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.css
+++ b/trunk/website/inc/css/style.css
@@ -42,7 +42,7 @@ html { overflow-x: hidden; }
 
 .searchbar {
 	display: block;
-	width: 163px;
+	width: 60px;
 	height: 14px;
 	padding: 6px 27px 6px 12px;
 	color: #666;
@@ -54,9 +54,20 @@ html { overflow-x: hidden; }
 	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
-	-webkit-transition: all .2s ease-in-out;
-	-moz-transition: all .2s ease-in-out;
-	transition: all .2s ease-in-out;
+	-webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	transition: all .4s ease-in-out;
+	margin-right:20px;
+}
+
+.searchbar:focus {
+	width: 120px;
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+	.hide-settings {
+		display: none;
+	}
 }
 
 /* Profiles + Specific Pages */
@@ -311,7 +322,7 @@ footer a {
 	float: left !important;
 	text-align: center;
 	padding: 5px 8px 5px !important;
-	display: inline-block !important;
+	display: inline-block;
 	line-height: 18px !important;
 	color: #fff;
 	text-decoration: none;
